Bug #20569 Garbage in DECIMAL results from some mathematical functions  * portability fix: moved the macro call after the C declaration