strings/decimal.c
@@ -170,8 +170,8 @@ static const dec1 frac_max[DIG_PER_DEC1-1]={
 #define ADD(to, from1, from2, carry)  /* assume carry <= 1 */           \
         do                                                              \
         {                                                               \
-          DBUG_ASSERT((carry) <= 1);                                    \
           dec1 a=(from1)+(from2)+(carry);                               \
+          DBUG_ASSERT((carry) <= 1);                                    \
           if (((carry)= a >= DIG_BASE)) /* no division here! */         \
             a-=DIG_BASE;                                                \
           (to)=a;                                                       \
